<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.wifimap.MainActivity" >
      <item
        android:id="@+id/KML"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/KML"/> 
      <item
        android:id="@+id/mapview"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/mapview"/>
      <item
        android:id="@+id/Clear"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/Clear"/> 
      <item
        android:id="@+id/About"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/About"/> 
       <item
        android:id="@+id/Exit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/Exit"/> 
</menu>
